test/fixture/errors/compilation_error/src/compilation_error.erl
-module(compilation_error).
-export([f/0]).

f() ->
    error error.
